Added: linking states together can now be done by selecting them, right-clicking and selecting a link option (or use the respective shortcut key). Linking is done in the order of selection.
Added: an option to clear out all selected states from the state context menu.
Added: an option to clear out a thing's properties from a thing's context menu.
Added: DOOM Retro "Gib health" thing property.
Fixed: state and thing copy and paste operations were much slower than they should to be.
Changed: sprite selection dialog now shows sprites at 2x scale.
Changed: always display a state's "unused" parameters since these actually affect a weapon sprite's offset even in vanilla Doom.
Changed: updated to PyAudio 0.2.11.

Version 1.1.2
-------------
Fixed: Doom Retro's PlaySound action was missing a parameter name, causing a crash when it was selected. Thanks to VGA.
Fixed: rewrote sprite name, frame and rotation handling to better emulate Doom's behaviour. As a result, zero-rotation sprites can now replace sprites with multiple rotations. Thanks to VGA.
Fixed: when selecting a new sprite for a state, all selected state's frames were set to 0 when no specific frame was selected. Thanks to VGA.

Version 1.1.1
-------------
Added: A Doom Retro engine configuration. Thanks to VGA.
Added: Unknown Dehacked fields are now ignored, but also saved unaltered.
Fixed: missing parameter names for the PlaySound and PlayWeaponSound state actions.
Fixed: the sprite label property not updating after selecting a sprite in the state editor.
Fixed: a crash when jumping to a state with the RandomJump action.
Fixed: choosing a 30th sprite frame.
Fixed: state parameters disappearing when selecting a state.
Fixed: state action editing was possible in non-extended patches.
Fixed: patch states with extra text in their headers being ignored.
Fixed: calculation of maximum string length.

Version 1.1.0
-------------